# COM-Server

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feedback.md
.github/workflows/: run-pytest-develop-win.yml  run-pytest-develop.yml  run-pytest-pr-win.yml  run-pytest-pr.yml  run-pytest-push.yml  run_pytest.yml  test.yml
docs/: index.md  issues.md  requirements.txt  translate.md
docs/en/: mkdocs.yml
docs/en/docs/: index.md
docs/en/docs/guide/: cli.md  getting-started.md  library-api.md
docs/guide/: cli.md  custom-io-thread.md  getting-started.md  library-api.md
docs/server/: index.md  server-api.md  v0.md  v1.md
examples/: README.txt  connection_example.py  server_example.py
examples/blink/: blink.ino  blink.py
examples/send_back/: connection_example.py  send_back.ino  server_example.py  test1.ino
src/com_server/: __init__.py  __main__.py  api_builtins.py  api_server.py  base_connection.py  connection.py  constants.py  disconnect.py  runner.py  server.py  tools.py
src/com_server/api/: __init__.py  v0.py  v1.py
tests/: README.txt  _test_version_greater.py  active_test.py  cmp_version.py  old_test.py  passive_test.py  start_server.py  test_all_ports.py  test_binary_srch.py  test_send_rcv.py  test_server.py  test_server_old.py  test_server_running.py  test_version.py  test_version_greater.py
tests/active/: test_all_ports.py  test_conn_state.py  test_get_first.py  test_receive_get.py  test_send.py  test_send_until.py
tests/methods/: README.txt  test_advanced.py  test_basic.py  test_connections.py
tests/methods/v0/: test_advanced.py  test_basic.py  test_connections.py
tests/old/: test_server_old.py
tests/old/methods/v0/: test_advanced.py  test_basic.py  test_connections.py
tests/passive/: cmp_version.py  test_all_ports.py  test_binary_srch.py  test_send_rcv.py  test_server.py  test_v1.py  test_version.py
