[metadata]
name = com-server
version = 0.0.0
author = Jonathan Liu
author_email = jonathanhliu21@gmail.com
description = A simple REST API that interacts with COM ports 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonyboi396825/COM-Server
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.6

[options.packages.find]
where = src
