[metadata]
name = com-server
version = 0.1b1
author = Jonathan Liu
author_email = jonathanhliu21@gmail.com
description = A simple Python library and a REST API server that interacts with COM ports 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonyboi396825/COM-Server
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: System :: Hardware :: Universal Serial Bus (USB)

[bdist_wheel]
universal=1

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts = com_server = com_server.__main__:main

[tool:pytest]
minversion = 6.0
addopts = 
    --ignore=tests/private
    -vv
testpaths = 
    tests
